login view done

--- a/GameWorlds/GameWorlds/Base.lproj/Main.storyboard
+++ b/GameWorlds/GameWorlds/Base.lproj/Main.storyboard
@@ -18,31 +18,107 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ylL-Wb-Z7i">
-                                <rect key="frame" x="122" y="243" width="143" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eJK-X6-sIt">
-                                <rect key="frame" x="122" y="308" width="143" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nqw-0C-jjH">
-                                <rect key="frame" x="122" y="411" width="143" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Login"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="login" translatesAutoresizingMaskIntoConstraints="NO" id="wph-1r-iJT">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nqw-0C-jjH">
+                                <rect key="frame" x="89" y="403.5" width="197" height="30"/>
+                                <color key="backgroundColor" red="0.30260616949550312" green="0.59270067644935331" blue="0.66666668653488159" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="Login">
+                                    <color key="titleColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
+                                </state>
                                 <connections>
                                     <action selector="loginB:" destination="BYZ-38-t0r" eventType="touchUpInside" id="fgt-FH-aHH"/>
                                 </connections>
                             </button>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ylL-Wb-Z7i">
+                                <rect key="frame" x="89" y="265.5" width="197" height="30"/>
+                                <color key="backgroundColor" red="1" green="0.72891413799288318" blue="0.6051429213419357" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="emailAddress" textContentType="username"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eJK-X6-sIt">
+                                <rect key="frame" x="89" y="318.5" width="197" height="30"/>
+                                <color key="backgroundColor" red="0.76943688017915757" green="0.90269396923998524" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="eJK-X6-sIt" firstAttribute="leading" secondItem="ylL-Wb-Z7i" secondAttribute="leading" id="1PC-QY-aX3"/>
+                            <constraint firstItem="eJK-X6-sIt" firstAttribute="trailing" secondItem="nqw-0C-jjH" secondAttribute="trailing" id="3cz-8O-JgG"/>
+                            <constraint firstItem="eJK-X6-sIt" firstAttribute="centerX" secondItem="nqw-0C-jjH" secondAttribute="centerX" id="88v-OW-GNJ"/>
+                            <constraint firstItem="eJK-X6-sIt" firstAttribute="trailing" secondItem="ylL-Wb-Z7i" secondAttribute="trailing" id="9uc-tq-m0F"/>
+                            <constraint firstItem="nqw-0C-jjH" firstAttribute="trailing" secondItem="eJK-X6-sIt" secondAttribute="trailing" id="Ade-7g-p4C"/>
+                            <constraint firstItem="eJK-X6-sIt" firstAttribute="top" secondItem="ylL-Wb-Z7i" secondAttribute="bottom" constant="23" id="ECD-EZ-qWp"/>
+                            <constraint firstItem="nqw-0C-jjH" firstAttribute="leading" secondItem="eJK-X6-sIt" secondAttribute="leading" id="Fe2-Fd-fEd"/>
+                            <constraint firstItem="ylL-Wb-Z7i" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="241" id="Ff5-sM-sGx">
+                                <variation key="heightClass=compact-widthClass=compact" constant="127"/>
+                                <variation key="heightClass=regular-widthClass=compact" constant="276"/>
+                            </constraint>
+                            <constraint firstItem="wph-1r-iJT" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="HMW-Lb-3qa"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ylL-Wb-Z7i" secondAttribute="trailing" constant="110" id="Hju-Al-PMS">
+                                <variation key="heightClass=regular-widthClass=compact" constant="89"/>
+                            </constraint>
+                            <constraint firstItem="ylL-Wb-Z7i" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="122" id="J8F-IL-Pdy">
+                                <variation key="heightClass=regular-widthClass=compact" constant="88"/>
+                            </constraint>
+                            <constraint firstItem="nqw-0C-jjH" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="89" id="M5U-mF-Imp"/>
+                            <constraint firstItem="eJK-X6-sIt" firstAttribute="trailing" secondItem="ylL-Wb-Z7i" secondAttribute="trailing" id="NHF-j4-Qhv"/>
+                            <constraint firstItem="nqw-0C-jjH" firstAttribute="top" secondItem="eJK-X6-sIt" secondAttribute="bottom" constant="39" id="PMf-81-jEb">
+                                <variation key="heightClass=compact-widthClass=compact" constant="33"/>
+                            </constraint>
+                            <constraint firstItem="eJK-X6-sIt" firstAttribute="top" secondItem="ylL-Wb-Z7i" secondAttribute="bottom" constant="20" id="UUG-a4-5a4">
+                                <variation key="heightClass=compact-widthClass=compact" constant="42"/>
+                                <variation key="heightClass=regular-widthClass=compact" constant="27"/>
+                            </constraint>
+                            <constraint firstItem="wph-1r-iJT" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="W4s-vX-txY"/>
+                            <constraint firstItem="nqw-0C-jjH" firstAttribute="centerX" secondItem="wph-1r-iJT" secondAttribute="centerX" id="aLP-Nw-12u"/>
+                            <constraint firstItem="wph-1r-iJT" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="j8T-LP-f9F"/>
+                            <constraint firstItem="eJK-X6-sIt" firstAttribute="leading" secondItem="ylL-Wb-Z7i" secondAttribute="leading" id="qsU-C8-yMd"/>
+                            <constraint firstItem="wph-1r-iJT" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="sZ2-2F-oBt"/>
+                            <constraint firstItem="nqw-0C-jjH" firstAttribute="top" secondItem="eJK-X6-sIt" secondAttribute="bottom" constant="55" id="uSL-mm-Qsy"/>
+                            <constraint firstItem="eJK-X6-sIt" firstAttribute="centerY" secondItem="wph-1r-iJT" secondAttribute="centerY" id="wE1-6K-We7"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="3cz-8O-JgG"/>
+                                <exclude reference="88v-OW-GNJ"/>
+                                <exclude reference="ECD-EZ-qWp"/>
+                                <exclude reference="NHF-j4-Qhv"/>
+                                <exclude reference="qsU-C8-yMd"/>
+                                <exclude reference="wE1-6K-We7"/>
+                                <exclude reference="M5U-mF-Imp"/>
+                                <exclude reference="aLP-Nw-12u"/>
+                                <exclude reference="uSL-mm-Qsy"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular-widthClass=compact">
+                            <mask key="constraints">
+                                <exclude reference="Hju-Al-PMS"/>
+                                <exclude reference="Ff5-sM-sGx"/>
+                                <exclude reference="J8F-IL-Pdy"/>
+                                <exclude reference="1PC-QY-aX3"/>
+                                <include reference="3cz-8O-JgG"/>
+                                <include reference="88v-OW-GNJ"/>
+                                <exclude reference="9uc-tq-m0F"/>
+                                <include reference="ECD-EZ-qWp"/>
+                                <include reference="NHF-j4-Qhv"/>
+                                <exclude reference="UUG-a4-5a4"/>
+                                <include reference="qsU-C8-yMd"/>
+                                <include reference="wE1-6K-We7"/>
+                                <exclude reference="Ade-7g-p4C"/>
+                                <exclude reference="Fe2-Fd-fEd"/>
+                                <include reference="M5U-mF-Imp"/>
+                                <exclude reference="PMf-81-jEb"/>
+                                <include reference="aLP-Nw-12u"/>
+                                <include reference="uSL-mm-Qsy"/>
+                            </mask>
+                        </variation>
                     </view>
                     <connections>
                         <outlet property="login" destination="ylL-Wb-Z7i" id="3Dc-yU-aUW"/>
@@ -53,14 +129,14 @@
             </objects>
             <point key="canvasLocation" x="-754.39999999999998" y="86.806596701649184"/>
         </scene>
-        <!--View Controller-->
+        <!--Worlds Controller-->
         <scene sceneID="iTc-O8-mXr">
             <objects>
-                <viewController id="TDa-1g-gof" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="worlds" id="TDa-1g-gof" customClass="WorldsController" customModule="GameWorlds" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="h5H-Q7-JBh">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="0.95933836698532104" green="0.0067451652139425278" blue="0.01027442142367363" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="YQx-LE-dqx"/>
                     </view>
                 </viewController>
@@ -69,4 +145,7 @@
             <point key="canvasLocation" x="463" y="128"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="login" width="850" height="755"/>
+    </resources>
 </document>
