worlds view done

--- a/GameWorlds/GameWorlds/Base.lproj/Main.storyboard
+++ b/GameWorlds/GameWorlds/Base.lproj/Main.storyboard
@@ -40,7 +40,7 @@
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eJK-X6-sIt">
                                 <rect key="frame" x="89" y="318.5" width="197" height="30"/>
-                                <color key="backgroundColor" red="0.76943688017915757" green="0.90269396923998524" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" red="0.76862745098039209" green="0.90196078431372551" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
@@ -136,13 +136,55 @@
                     <view key="view" contentMode="scaleToFill" id="h5H-Q7-JBh">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="0.95933836698532104" green="0.0067451652139425278" blue="0.01027442142367363" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="MF3-Ca-7Lh">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="worldCell" rowHeight="71" id="hQT-6n-RE2" customClass="WorldsTableViewCell" customModule="GameWorlds" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="71"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="hQT-6n-RE2" id="5J8-j7-S0N">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="70.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="world" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U1P-LV-yxx">
+                                                    <rect key="frame" x="15" y="10.5" width="345" height="49.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="U1P-LV-yxx" firstAttribute="leading" secondItem="5J8-j7-S0N" secondAttribute="leadingMargin" id="Gs9-MJ-lps"/>
+                                                <constraint firstItem="U1P-LV-yxx" firstAttribute="centerY" secondItem="5J8-j7-S0N" secondAttribute="centerY" id="HOz-Xa-FRC"/>
+                                                <constraint firstItem="U1P-LV-yxx" firstAttribute="centerX" secondItem="5J8-j7-S0N" secondAttribute="centerX" id="S6J-bR-HLc"/>
+                                                <constraint firstItem="U1P-LV-yxx" firstAttribute="bottom" secondItem="5J8-j7-S0N" secondAttribute="bottomMargin" id="noa-1o-Ol2"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="worldLabel" destination="U1P-LV-yxx" id="CAQ-6X-5dn"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="MF3-Ca-7Lh" firstAttribute="leading" secondItem="YQx-LE-dqx" secondAttribute="leading" id="8W6-qp-mak"/>
+                            <constraint firstItem="YQx-LE-dqx" firstAttribute="bottom" secondItem="MF3-Ca-7Lh" secondAttribute="bottom" id="8sf-LE-0ZC"/>
+                            <constraint firstItem="MF3-Ca-7Lh" firstAttribute="top" secondItem="YQx-LE-dqx" secondAttribute="top" id="gCo-fm-2BZ"/>
+                            <constraint firstItem="YQx-LE-dqx" firstAttribute="trailing" secondItem="MF3-Ca-7Lh" secondAttribute="trailing" id="nYj-fT-nr9"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="YQx-LE-dqx"/>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="MF3-Ca-7Lh" id="aTT-Xn-Fan"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yRG-wC-SkE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="463" y="128"/>
+            <point key="canvasLocation" x="461.60000000000002" y="127.28635682158921"/>
         </scene>
     </scenes>
     <resources>
